--- a/tidy/app/build.gradle
+++ b/tidy/app/build.gradle
@@ -58,4 +58,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 //    Recycler View Dependency
     implementation 'com.google.android.material:material:1.1.0'
+//    Card View/SlidingPane Dependency
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
 }
