--- a/tidy/app/build.gradle
+++ b/tidy/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.2'
     testImplementation 'junit:junit:4.+'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -71,4 +72,7 @@ dependencies {
     implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // work scheduler
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
 }
