--- a/tidy/app/src/main/AndroidManifest.xml
+++ b/tidy/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.epfl.esl.tidy">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
