--- a/tidy/wear/build.gradle
+++ b/tidy/wear/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     // android wear
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+
+    //recycler view
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    //implementation project(path: ':app')
 }
