--- a/tidy/app/build.gradle
+++ b/tidy/app/build.gradle
@@ -46,7 +46,7 @@ android {
 }
 
 dependencies {
-    implementation("androidx.constraintlayout:constraintlayout:2.1.3")
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.activity:activity-ktx:1.2.0"
     implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -86,4 +86,5 @@ dependencies {
     // ARCore
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.15.0"
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.ar:core:1.29.0'
 }
