--- a/tidy/app/src/main/AndroidManifest.xml
+++ b/tidy/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/broom"
+        android:label="TidyApp"
+        android:roundIcon="@drawable/broom"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tidy">
 
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+        <meta-data android:name="com.google.ar.core" android:value="optional" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
